<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NaturCyL</string>
    <string name="action_settings">Ajustes</string>
    <string name="hola">Hola Mundo</string>
    <string name="title_activity_espacio"></string>
    <string name="codigo">Código</string>
    <string name="accesibilidad">Adaptado</string>
    <string name="area">Área</string>
    <string name="estado">Estado</string>
    <string name="senalizacion">Señalización</string>
    <string name="q">Q de calidad</string>
    <string name="interes_turistico">Interés turístico</string>
    <string name="tipo">Tipo</string>
    <string name="fecha_declaracion">Fecha de declaración</string>
    <string name="observaciones">Observaciones</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="acceso">Acceso</string>
    <string name="acerca">Acerca de la app</string>
    <string name="compartir">Compartir</string>
    <string name="abrir">Abrir en</string>
    <string name="streetview">StreetView</string>
    <string name="como_llegar">Cómo llegar</string>
    <string name="informacion">Información</string>
    <string name="conjunto_datos">Acerca de los datos</string>
    <string name="terceros">Bibliotecas de código abierto</string>
    <string name="gnu_gpl_v3">GNU GPL v3</string>
    <string name="acerca_de">
        Aplicación para consultar los espacios naturales de la comunidad autónoma de Castilla y León, así como sus equipamientos y posibilidades \n\n

        Copyright &#169; 2019 David Población\n\n

        Este programa es software libre: puede redistribuirlo y/o modificarlo bajo
        los términos de la Licencia General Pública de GNU publicada por la Free
        Software Foundation, ya sea la versión 3 de la Licencia, o (a su elección)
        cualquier versión posterior.\n\n

        Este programa se distribuye con la esperanza de que sea útil pero SIN
        NINGUNA GARANTÍA; incluso sin la garantía implícita de MERCANTIBILIDAD o
        CALIFICADA PARA UN PROPÓSITO EN PARTICULAR. Vea la Licencia General Pública
        de GNU para más detalles.\n\n

        Usted ha debido de recibir una copia de la Licencia General Pública
        de GNU junto con este programa. Si no, vea http://www.gnu.org/licenses/.

    </string>
    <string name="datos">
        Los datos que usa esta aplicación se han extraído del [portal de datos abiertos](http://datosabiertos.jcyl.es)
        de la [Junta de Castilla y León](http://www.jcyl.es). Se han utilizado los siguientes conjuntos de datos:\n
        * Aparcamientos en espacios naturales\n
        * Zonas recreativas en espacios naturales\n
        * Árboles singulares en espacios naturales\n
        * Espacios naturales\n
        * Casas del parque en espacios naturales\n
        * Refugios en espacios naturales\n
        * Zonas de acampada en espacios naturales\n
        * Centros de visitantes en espacios naturales\n
        * Observatorios en espacios naturales\n
        * Miradores en espacios naturales\n
        * Quioscos en espacios naturales\n
        * Sendas en espacios naturales\n

        \nLos mapas usados en la aplicación se obtienen de [OpenStreetMap](https://www.openstreetmap.org/) y de [MapBox](https://www.mapbox.com/) (satélite).\n
        \Para calcular la navegación en las sendas se usa [Graphhopper](https://www.graphhopper.com/).\n
        \nLas fotografías se obtienen a través de [Flickr](https://flickr.com) y pueden tener derechos de autor.
    </string>
    <string name="title_activity_cercanos">Cercanos</string>
    <string name="longitud">Longitud</string>
    <string name="tiempo">Tiempo</string>
    <string name="desnivel">Desnivel</string>
    <string name="dificultad">Dificultad</string>
    <string name="ciclabilidad">Ciclabilidad</string>
    <string name="flickr_advertencia">Las fotografías han sido extraídas de Flickr y pueden tener derechos de autor</string>
</resources>