<!--
  ~ Aplicación para consultar los espacios naturales de la comunidad
  ~ autónoma de Castilla y León, así como sus equipamientos y
  ~ posibilidades.
  ~
  ~ Copyright (C) 2019  David Población Criado
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.jcyl.datosabiertos.apps.naturcyl.ItemActivity">
    <item
        android:id="@+id/accion_compartir"
        android:orderInCategory="100"
        android:title="@string/compartir"
        app:showAsAction="never" />
    <item
        android:id="@+id/accion_abrir"
        android:orderInCategory="100"
        android:title="@string/abrir"
        app:showAsAction="never" />
    <item
        android:id="@+id/accion_streetview"
        android:orderInCategory="100"
        android:title="@string/streetview"
        app:showAsAction="never" />
    <item
        android:id="@+id/accion_como_llegar"
        android:orderInCategory="100"
        android:title="@string/como_llegar"
        app:showAsAction="never" />
</menu>
